file manager moved some of the sidenav styles to their own less files + sidenav header height to prevent height flickering

--- a/src/app/main/apps/file-manager/file-manager.less
+++ b/src/app/main/apps/file-manager/file-manager.less
@@ -1,13 +1,5 @@
 #file-manager {
 
-    .main-sidenav {
-        width: 240px;
-        min-width: 240px;
-        max-width: 240px;
-        z-index: 51;
-        box-shadow: @whiteframe-shadow-z3;
-    }
-
     .center {
 
         .header {
@@ -35,20 +27,7 @@
             padding: 0;
         }
     }
-
-    .details-sidenav {
-        width: 320px;
-        min-width: 320px;
-        max-width: 320px;
-        padding: 0;
-
-        &.md-locked-open {
-            width: 320px;
-            min-width: 320px;
-            max-width: 320px;
-        }
-    }
-
+    
     .icon- {
         text-align: center;
 
