--- a/src/app/main/apps/file-manager/sidenavs/details/details-sidenav.less
+++ b/src/app/main/apps/file-manager/sidenavs/details/details-sidenav.less
@@ -2,6 +2,16 @@
 
     // Sidenav
     .sidenav {
+        width: 320px;
+        min-width: 320px;
+        max-width: 320px;
+        padding: 0;
+
+        &.md-locked-open {
+            width: 320px;
+            min-width: 320px;
+            max-width: 320px;
+        }
 
         .header {
             height: 200px;
