--- a/src/app/main/apps/file-manager/sidenavs/main/main-sidenav.less
+++ b/src/app/main/apps/file-manager/sidenavs/main/main-sidenav.less
@@ -2,8 +2,15 @@
 
     // Main sidenav
     .main-sidenav {
+        width: 240px;
+        min-width: 240px;
+        max-width: 240px;
+        z-index: 51;
+        box-shadow: @whiteframe-shadow-z3;
 
         .header {
+            height: 150px;
+            min-height: 150px;
             padding: 24px;
             border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
